          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Added abstract
          node classes TransformNode and ViewpointNode.

2003-02-14  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp:  Restored necessary
          clearing of bound node stacks in Browser::loadURI.

2003-02-13  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Added do_shutdown
          implementations to AudioClip, MovieTexture, PointLight,
          SpotLight, TimeSensor.

        * src/openvrml/OpenVRML/browser.cpp:  Removed unnecessary
          clearing of node lists in Browser::loadURI.

2003-02-09  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp:  Only call Scene::shutdown
          if Browser::scene is nonzero.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Added do_shutdown
          implementations to NavigationInfo, Viewpoint.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Added do_shutdown
          implementation to Text.

2003-02-08  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Bound node stacks should
          not have owning pointers.

        * src/openvrml/OpenVRML/browser.cpp:  Fixed relative URI
          resolution bug where '?' and '#' separator characters were
          omitted.

2003-02-07  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/System.cpp,
          src/openvrml/OpenVRML/System.h,
          src/openvrml/OpenVRML/browser.cpp,